--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mssql": "^7.3.0",
     "nodemon": "^2.0.15"
   },
